--- a/index.html
+++ b/index.html
@@ -7,502 +7,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
     <link rel="stylesheet" href="css/swiper.min.css" />
     <link rel="stylesheet" href="css/global.css" />
-    <style>
-     html, body{  
-                height: 100%;  
-            }  
-            .swiper-first{  
-                height: 100%;  
-            }  
-    body {
-        width: 100%;
-        /*min-width:320px;*/
-        max-width: 750px;
-        margin: 0 auto;
-    }
-    /*****=========  第一页面  BEGIN   ========= *******/
-
-    .pageOne-header {
-        margin-bottom: 48px;
-        overflow: hidden;
-    }
-    .pageOne-header img:first-child {
-        width: 60px;
-        height: 32px;
-        margin: 15px 0 0 20px;
-    }
-    .pageOne-header img:last-child {
-        width: 108px;
-        height: 70px;
-        margin: 10px 10px 0 0;
-    }
-    .pageOne-section {
-    	position: relative;
-    	z-index: 1;
-        width: 100%;
-        padding-right: 15%;
-        text-align: right;
-        box-sizing: border-box;
-    }
-    .pageOne-section div {
-        font-size: 0;
-    }
-    .section-first span {
-        font-size: 40px;
-        font-weight: bold;
-        color: #009944;
-        margin-right: 8px;
-    }
-    .section-first img {
-        width: 84px;
-        height: 32px;
-    }
-
-    .section-first img,
-    .section-first span,
-    .section-second img,
-    .section-second span {
-        vertical-align: bottom;
-    }
-    .section-second {
-        position: relative;
-    }
-
-    .section-second img {
-        width: 206px;
-        height: 52px;
-        margin-right: 92px;
-    }
-
-    .section-second span {
-        position: absolute;
-        right: 14px;
-        bottom: 0;
-
-        font-size: 42px;
-        font-weight: bold;
-        color: #151515;
-    }
-
-    .section-third {
-        display: block;
-        width: 168px;
-        float: right;
-    }
-
-    .pageOne-footer {
-        position: fixed;
-    }
-
-    .footer-city {
-        position: fixed;
-        bottom: 37px;
-        left: 0px;
-        /* width: 372px; */
-        transform: rotate(18deg);
-    }
-
-    .footer-earth {
-        margin: 0 auto;
-        display: block;
-        width: 290px;
-        position: fixed;
-        right: 0;
-        left: -8px;
-        bottom: -108px;
-    }
-
-
-
-    .footer-car {
-           position: fixed;
-	    right: 10px;
-	    bottom: 50px;
-	    width: 140px;
-	    z-index: 3;
-    }
-
-    .footer-order {
-        margin: 0 auto;
-        position: fixed;
-        right: 0;
-        bottom: 12px;
-        left: 0;
-        width: 138px;
-        height: 38px;
-        line-height: 38px;
-        text-align: center;
-        border-radius: 10px;
-        background: -webkit-linear-gradient(#d9edff, #acfeff);
-        box-shadow: 0px 0px 20px #a7dcdc;
-        font-size: 14px;
-        color: #33ad69;
-    }
-
-    .footer-back {
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        z-index: -1;
-    }
-    /*****=========  第一页面  END   ========= *******/
-    /*****=========  第二页面  BEGIN   ========= *******/
-
-    .pageTwo-header {
-        padding: 15px 12px;
-        margin-bottom: 50px;
-        overflow: hidden;
-    }
-
-    .pageTwo-header img:first-child {
-        width: 60px;
-        height: 32px;
-    }
-
-    .pageTwo-header img:nth-child(2) {
-        width: 126px;
-    }
-
-    .swpier-second img {
-        display: block;
-        width: 100%;
-    }
-
-    .swpier-button-gray-left {
-        opacity: 1 !important;
-        background-image: url(images/page2/prev-btn.png) !important;
-    }
-
-    .swpier-button-gray-right {
-        opacity: 1 !important;
-        background-image: url(images/page2/next-btn.png) !important;
-    }
-
-    .dpImg {
-        /*margin: 10px 0 50px;*/
-    }
-
-    .apply {
-  		display: block;
-        margin: 20px auto;
-        width: 254px;
-        height: 38px;
-        font-size: 14px;
-        line-height: 38px;
-        text-align: center;
-        border-radius: 6px;
-        color: #fff;
-        background: -webkit-linear-gradient(#00d45e, #009d46);
-        box-shadow: 0px 0px 20px #b2e1e1;
-        color: #fff;
-    }
-    /*****=========  第三个页面  BEGIN   ========= *******/
-
-    .dq-picture {
-        margin: 0 auto;
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 0;
-        width: 80%;
-    }
-
-    .form-sumbit {
-        position: relative;
-        padding: 180px 60px 0 30px;
-        width: 100%;
-        box-sizing: border-box;
-    }
-
-    .form-sumbit p {
-        text-align: right;
-        text-decoration: underline;
-        font-size: 12px;
-        color: #303030;
-        margin-bottom: 12px;
-    }
-
-    .form-common-content {
-        width: 100%;
-        margin-bottom: 7px;
-        overflow: hidden;
-    }
-
-    .form-common-content span {
-        float: left;
-        width: 40%;
-        line-height: 36px;
-        text-align: right;
-        font-size: 14px;
-        color: #3f3f3f;
-        padding-right: 22px;
-        box-sizing: border-box;
-    }
-
-    .form-common-content-input {
-        position: relative;
-        float: left;
-        width: 60%;
-        height: 36px;
-        line-height: 36px;
-        background: #000;
-        opacity: .3;
-        box-sizing: border-box;
-        padding-left: 8px;
-    }
-
-    .form-common-content-input img {
-        position: absolute;
-        left: 8px;
-        top: 9px;
-        width: 18px;
-        vertical-align: middle;
-    }
-
-    .form-common-content-input input,
-    .form-common-content-input select {
-        display: block;
-        margin-top: 8px;
-        padding-left: 22px;
-        width: 100%;
-        height: 20px;
-        border: none;
-        box-sizing: border-box;
-        background: transparent;
-        color: #fff;
-    }
-
-    .address-select::after {
-        content: "";
-        position: absolute;
-        right: 3px;
-        top: 14px;
-        height: 0px;
-        width: 0px;
-        border-left: 6px solid transparent;
-        border-right: 6px solid transparent;
-        border-top: 8px solid #fff;
-    }
-
-    .affirm {
-        display: block;
-        margin: 20px auto;
-        width: 254px;
-        height: 38px;
-        font-size: 14px;
-        line-height: 38px;
-        text-align: center;
-        border-radius: 6px;
-        color: #fff;
-        background: -webkit-linear-gradient(#00d65f, #009b45);
-        box-shadow: 0px 0px 20px #b2e1e1;
-        border: none;
-    }
-
-    .pageThird-footer {
-        position: relative;
-        width: 100%;
-        text-align: center;
-        font-size: 10px;
-        color: #525252;
-    }
-
-    .pageThird-footer span {
-        position: absolute;
-        bottom: 20px;
-        left: 0;
-        width: 100%;
-        text-align: center;
-    }
-    /*** 弹层样式 ***/
-
-    .pageThird-layer {
-        display: none;
-    }
-
-    .layer-wrap {
-        position: fixed;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        background: #000;
-        opacity: .8;
-        z-index: 10;
-    }
-
-    .layer-content {
-        margin: auto;
-        position: fixed;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        width: 278px;
-        height: 400px;
-        z-index: 11;
-        border-radius: 6px;
-        padding: 0 10px 0 22px;
-        box-sizing: border-box;
-        background: url(images/page3/popup-img.png) no-repeat bottom;
-        background-color: #fff;
-    }
-
-    .popup-cat {
-        position: absolute;
-        left: 6px;
-        top: -22px;
-        width: 78px;
-    }
-
-    .popup-close {
-        position: absolute;
-        right: -8px;
-        top: -8px;
-        width: 18px;
-    }
-
-    .layer-activeRule {
-        position: relative;
-        margin: 0 auto;
-        margin-top: 32px;
-        width: 188px;
-        height: 10px;
-        border-bottom: 1px solid #454444;
-        font-size: 20px;
-        font-weight: bold;
-        color: #454444;
-        text-align: center;
-    }
-
-    .layer-activeRule span {
-        margin-top: -8px;
-        background: #fff;
-        padding: 0 14px;
-    }
-
-    .layer-activeRule::after {
-        content: "";
-        position: absolute;
-        left: 40px;
-        top: 5px;
-        width: 8px;
-        height: 8px;
-        border-radius: 50%;
-        border: 1px solid #454444;
-    }
-
-    .layer-activeRule::before {
-        content: "";
-        position: absolute;
-        right: 40px;
-        top: 5px;
-        width: 8px;
-        height: 8px;
-        border-radius: 50%;
-        border: 1px solid #454444;
-    }
-
-    .layer-title {
-        margin-top: 30px;
-        line-height: 24px;
-        text-align: center;
-        font-size: 16px;
-        color: #009944;
-    }
-
-    .layer-activeRule-content {
-        margin-top: 10px;
-        width: 300px;
-        line-height: 20px;
-        color: #6c6c6c;
-        font-size: 12px;
-        transform: scale(0.8);
-        -webkit-transform: scale(0.8);
-        -webkit-transform-origin: 0 0;
-        transform-origin: 0 0;
-    }
-
-    .pageSecond,.pageThird,.pageFour{
-    	z-index: 1000;
-    	position: fixed;
-    	left: 0;
-    	top:0;
-    	width: 100%;
-    	height: 100%;
-    	background: #fff;
-		transform: translate3d(0,-100%,0);
-		/*-webkit-transform: translateY(-200%);*/
-		/*transition: all .4s ease-out;*/
-		overflow: auto;
-		/*display: none;*/
-		/*opacity: 0;*/
-    }
-    @keyframes fadeIn {
-	    0% {
-	    	opacity: 1
-	        
-	    }
-	    to {
-	        opacity: 0
-	    }
-	}
-
-	.fadeIn {
-	    animation: fadeIn 1s  forwards;
-	}
-    .fadeInDown {
-	    animation: fadeInDown 1s  forwards;
-	    animation-delay: .03s;
-
-	}
- 	@keyframes fadeInDown {
-	    0% {
-	        opacity: 0;
-	        transform: translate3d(0, -100%, 0)
-	    }
-	    to {
-	        opacity: 1;
-	        transform: none
-	    }
-	}
-    .footer-earth{
-	    animation:motionRound 15s linear infinite;
-	    animation-play-state: running;
-    	-webkit-animation-play-state: running;
-    	transform-origin:50% 50%;
-	}
- 	
-	@keyframes motionRound {
-		0% {transform:rotate(0deg);} 
-		100% {transform:rotate(360deg);}
-	}  
-	@-webkit-keyframes motionRound {
-		0% {transform:rotate(0deg);} 
-		100% {transform:rotate(360deg);}
-	}
-
-
-	@keyframes zoomIn {
-    0% {
-        opacity: 0;
-        transform: scale3d(.3, .3, .3)
-    }
-    50% {
-        opacity: 1
-	    }
-	}
-	.footer-city {
-	    animation: zoomIn  2s  forwards;
-	    bottom: 48px;
-	}
-    </style>
+	<link rel="stylesheet" href="css/index.css">
 </head>
-
 <body>
 	<!-- 页面一 -->
-    <div class="pageFirst pageWrap">
+    <div class="pageFirst pageWrap cssjr">
         <!--头部	BEGIN-->
         <div class="pageOne-header">
             <img src="images/icon.png" class="fl" />
@@ -512,28 +21,33 @@
         <!--主要信息   BEGIN-->
         <div class="pageOne-section">
             <div class="section-first">
-                <span>共享宝马</span>
-                <img src="images/car.png" />
+                <span class="animated bounceInLeft cssjr">共享宝马</span>
+                <img src="images/car.png" class="carAnimate " />
             </div>
             <div class="section-second">
-                <img src="images/gofun.png" />
-                <span>来袭</span>
+                <img src="images/gofun.png" class="animated bounceInLeft"/>
+                <span class="animated sizeAnimateSecond">来</span>
+                <span class="animated sizeAnimate"style="right:54px;">袭</span>
             </div>
-            <img src="images/lowPrice.png" class="section-third" />
+            <img src="images/lowPrice.png" class="section-third animated bounceInLeft" />
         </div>
         <!--主要信息   END-->
         <!-- 底部 BEGIN-->
         <div class="pageOne-footer">
-            <img src="images/city.png" class="footer-city" />
-            <img src="images/earth.png" class="footer-earth  " />
+        	<div class="footer-city-main">
+            	<img src="images/city.png?v=2012" class="footer-city" />
+       		</div>
+            <img src="images/earth.png" class="footer-earth" />
+            <div class="footer-car-mian">
             <img src="images/big-car.png" class="footer-car" />
+        	</div>
             <div class="footer-order">抢先预约</div>
             <img src="images/footer-back.png" class="footer-back" />
         </div>
         <!-- 底部 END-->
     </div>
     <!-- 页面二 -->
-    <div class="pageSecond pageWrap">
+    <div class="pageSecond pageWrap cssjr">
         <!--头部-->
         <div class="pageTwo-header">
             <img src="images/icon.png" class="fl" />
@@ -564,7 +78,7 @@
         <div class="apply">立即报名</div>
     </div>
     <!--页面三-->
-    <div class="pageThird pageWrap">
+    <div class="pageThird pageWrap cssjr">
         <!--头部-->
         <div class="pageTwo-header">
             <img src="images/icon.png" class="fl" />
@@ -617,7 +131,7 @@
                 </div>
             </div>
         </div>
-        <input type="submit" value="确认" class="affirm" />
+        <input type="submit" value="确认" class="affirm J_affirm" />
 
         <!--对应第三页底部内容-->
         <div class="pageThird-footer">
@@ -626,7 +140,7 @@
         </div>
     </div>
     <!--页面4-->
-    <div class="pageFour pageWrap">
+    <div class="pageFour pageWrap cssjr">
         <!--头部-->
         <div class="pageTwo-header">
             <img src="images/icon.png" class="fl" />
@@ -634,7 +148,7 @@
         </div>
         <img src="images/page2/success-img1.png" class="dpImg" />
         <img src="images/page2/success-img2.png" class="dpImg" />
-        <div class="affirm" style="width:156px">奔走相告</div>
+        <div class="affirm J_shade" style="width:156px">奔走相告</div>
     </div>
     <!--第三页面弹层-->
     <div class="pageThird-layer">
@@ -661,6 +175,23 @@
             </div>
         </div>
     </div>
+    <!--第四页面弹层-->
+    <div class="pageFour-layer">
+    	<div class="layer-wrap J_layerShade"></div>
+		<img src="images/page2/success-jiantou.png" />
+    </div>
+    <!--第一个页面弹窗-->
+     <div class="pageFrist-layer">
+    	<div class="layer-wrap "></div>
+    	<div class="pageFrist-layer-main">
+    		<img src="images/page2/popup-cat.png"/>
+    		<!--文案一-->
+    		<p>您已参加过活动<br/>谢谢支持!</p>
+    		<!--文案二-->
+    		<p>活动结束<br/>谢谢您的支持!</p>
+			<img src="images/page2/popup-img.png"  class="pageFrist-footerBack"/>
+    	</div>
+    </div>
 </body>
 </html>
 <script type="text/javascript" src="js/swiper.min.js"></script>
@@ -670,13 +201,14 @@
 	//初始化swpier
 	var mySwiper = new Swiper('.swpier-second', {
 	    prevButton: '.swiper-button-prev',
-	    nextButton: '.swiper-button-next',
+	    nextButton: '.swiper-button-next'
 	    // direction:"horizontal"
 	})
 	
 	pageFrist();
 	pageSecond();
 	pageThird();
+	pageFour();
 	//页面一相关功能
 	function pageFrist() {
 		nextPage(document.querySelector(".footer-order"),1);
@@ -688,7 +220,7 @@
 	}
 	//页面三相关功能
 	function pageThird(){
-		nextPage(document.querySelector(".affirm"),3);
+		nextPage(document.querySelector(".J_affirm"),3);
 		//获取弹窗
 		var nd_layer = document.querySelector('.pageThird-layer');
 		//获取关闭弹窗按钮
@@ -704,10 +236,18 @@
 		    nd_layer.style.display = "block";
 		}
 	}
+	//页面四相关功能
+	function pageFour(){
+		$(".J_shade").on('click',function(){
+			$(".pageFour-layer").show();
+		})
+		$(".J_layerShade").on('click',function(){
+			$(".pageFour-layer").hide();
+		})
+	}
 	//切换轮播下一页
 	function nextPage(ele,index){
 		ele.onclick = function(){
-			$(".pageWrap").eq(index-1).addClass("fadeIn");
 			$(".pageWrap").eq(index).addClass("fadeInDown");
 		}
 	}
