--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
                 <img src="images/car.png" class="carAnimate " />
             </div>
             <div class="section-second">
-                <img src="images/gofun.png" class="animated bounceInLeft"/>
-                <span class="animated sizeAnimateSecond">来</span>
-                <span class="animated sizeAnimate"style="right:54px;">袭</span>
+                <img src="images/gofun.png" class="animated bounceInLeft adimatedTime1"/>
+				 <span class="animated sizeAnimate" style="right:54px;">来</span>
+				<span class="animated  sizeAnimateSecond">袭</span>
+               
+               
             </div>
-            <img src="images/lowPrice.png" class="section-third animated bounceInLeft" />
+            <img src="images/lowPrice.png" class="section-third animated bounceInLeft adimatedTime2" />
         </div>
         <!--主要信息   END-->
         <!-- 底部 BEGIN-->
@@ -39,7 +41,13 @@
        		</div>
             <img src="images/earth.png" class="footer-earth" />
             <div class="footer-car-mian">
-            <img src="images/big-car.png" class="footer-car" />
+				<img src="images/small-car.png" class="footer-car" />
+				<div class="car-wheel-front wheelRotate">
+					<img src="images/lzj-front.png" /> 
+				</div>
+				<div class="car-wheel-end wheelRotate">
+					<img src="images/lzj-end.png" /> 
+				</div>
         	</div>
             <div class="footer-order">抢先预约</div>
             <img src="images/footer-back.png" class="footer-back" />
