第三次筏板

--- a/index.html
+++ b/index.html
@@ -5,12 +5,29 @@
     <meta charset="UTF-8">
     <title></title>
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+    <meta name="x5-fullscreen" content="true">
+<meta name="full-screen" content="yes">
     <link rel="stylesheet" href="css/swiper.min.css" />
     <link rel="stylesheet" href="css/global.css" />
 	<link rel="stylesheet" href="css/index.css">
 
 </head>
 <body>
+	
+	<!--loading页面-->
+	<div class="loadLayer">
+		<div class="loadLayer-car">
+			<img src="images/small-car.png" class="loadLayer-car-picture" />
+			<div class="car-wheel-front wheelRotate">
+				<img src="images/lzj-front.png" /> 
+			</div>
+				<div class="car-wheel-end wheelRotate">
+				<img src="images/lzj-end.png" /> 
+			</div>
+			<div class="hintInfo">努力加载中........</div>
+		</div>
+	</div>
+	
 	<!-- 页面一 -->
     <div class="pageFirst pageWrap cssjr">
         <!--头部	BEGIN-->
@@ -27,8 +44,8 @@
             </div>
             <div class="section-second">
                 <img src="images/gofun.png" class=" J_gofun"/>
-				 <span class="] J_size" style="right:54px;">来</span>
-				<span class="] J_size">袭</span>
+				 <span class="J_size" style="right:54px;">来</span>
+				<span class="J_sizeTwo">袭</span>
             </div>
             <img src="images/lowPrice.png" class="section-third  J_dz" />
         </div>
@@ -41,10 +58,10 @@
             <img src="images/earth.png" class="footer-earth" />
             <div class="footer-car-mian">
 				<img src="images/small-car.png" class="footer-car" />
-				<div class="car-wheel-front wheelRotate">
+				<div class="car-wheel-front">
 					<img src="images/lzj-front.png" /> 
 				</div>
-				<div class="car-wheel-end wheelRotate">
+				<div class="car-wheel-end">
 					<img src="images/lzj-end.png" /> 
 				</div>
         	</div>
@@ -190,16 +207,29 @@
             </div>
             <h3 class="layer-title">Gofun Pro 共享宝马来袭<br/>低至0元出去浪！</h3>
             <div class="layer-activeRule-content">
-                <p>一、活动时间：2018年1月31日-2018年2月9日</p>
-                <p>二、活动地区：北京</p>
-                <p>三、参与方式：</p>
-                <p>1、完整输入真实报名信息提交后，即参与成功；</p>
-                <p>2、活动期间每个手机号每天仅可选择1种预约方式报名1次。</p>
-                <p>四、体验优惠获取：</p>
-                <p> 任意应用商店搜索“Gofun出行”，下载App并注册手机号码后的2个工作日内，可得与您预约方式相对应的体验券1张。</p>
-                <p>1、个人预约用户：1元2小时宝马限时体验券（必得，以短信提示为准）</p>
-                <p>2、4人预约用户：10元5小时宝马限时体验券（必得，以短信提示为准）</p>
-                <p>3、8人预约用户：0元48小时宝马限时体验券（每天抽取2人，每人2张，以短信提示为准）</p>
+				<p>一、报名时间：2018年1月31日-2018年2月9日</p>
+				<p>二、活动地区：北京</p>
+				<p>三、参与方式：</p>
+				<p>1、完整输入真实报名信息提交后，即参与成功；</p>
+				<p>2、活动期间，每个微信ID仅能参与2次报名。</p>
+				<p>四、体验优惠获取：</p>
+				<p> 任意应用商店搜索“Gofun出行”，下载App并注册手机号码后的2个工作日内，可得与您预约方式相对应的体验券：</p>
+				<p>1、个人预约用户：1元2小时限时体验券1张（限【20】公里，必得，以短信提示为准）</p>
+				<p>2、4人预约用户：10元5小时限时体验券1张（限【70】公里，每天限50人，以短信提示为准）</p>
+				<p>3、8人预约用户：0元48小时限时体验券（限【200】公里，每天抽取2人，每人2张，以短信提示为准）</p>
+				<p>4、企业预约用户：0元168小时限时体验券（限【700】公里，每两天抽取1人，每人5张，1个工作日内以客服电话确认为准）</p>
+				<p> 注：</p>
+				<p>（1）请您在报名后12小时内用报名的手机号注册Gofun出行App，否则优惠券将无法到账；</p>
+				<p>（2）活动期间内，获奖用户信息，每天公示在“Gofun北京”微信订阅号中；</p>
+				<p>（3）“意向体验地点”仅作为参考，以App中实际车辆显示及使用为准。</p>
+				<p>五、优惠券使用规则：</p>
+				<p>1、适用于Gofun出行运营的北京地区所有新能源车型（含宝马i3车型，车辆有限，先到先得）；</p>
+				<p>2、新老用户均可享有；</p>
+				<p>3、只可抵扣“时间、里程”费用，不可抵扣不计免赔服务费，超出部分按正常价格计费。</p>
+				<p>4、优惠券有效期自到账后14日内有效，过期不补，其他使用规则以App显示为准。</p>
+				<p>六、Gofun车辆使用方法：</p>
+				<p>任意应用商店搜索“Gofun出行”，下载App并注册手机号码，完成实名认证（身份证+驾照+押金），即可使用车辆。</p>
+				<p> 在试驾过程中，如果遇到任何问题，请拨打客服热线400-019-0808。</p>
             </div>
         </div>
     </div>
@@ -220,6 +250,7 @@
 			<img src="images/page2/popup-img.png"  class="pageFrist-footerBack"/>
     	</div>
     </div>
+
 </body>
 </html>
 <script type="text/javascript" src="js/swiper.min.js"></script>
@@ -227,95 +258,119 @@
 <script type="text/javascript" src="js/touch.js"></script>
 <script>
 
-
-    window.onload = function(){
-        $(".J_gxbm").addClass("animated bounceInLeft")
-        $(".J_car").addClass("carAnimate")
-        $(".J_gofun").addClass("animated bounceInLeft adimatedTime1");
-        $(".J_size").addClass("animated  sizeAnimateSecond");
-        $(".J_dz").addClass("animated bounceInLeft adimatedTime2");
-    }
-	//初始化swpier
-	var mySwiper = new Swiper('.swpier-second', {
-	    prevButton: '.swiper-button-prev',
-	    nextButton: '.swiper-button-next'
-	    // direction:"horizontal"
-	})
-	
-	pageFrist();
-	pageSecond();
-	pageThird();
-	pageFour();
-	
-	setTimeout(function(){
-		$(".J_size").addClass("shake")
-	},2000)
+	/*去掉手机滑动默认行为 禁止微信拉伸*/
+	document.body.addEventListener('touchmove',bodyScroll);
+	function bodyScroll(event){
+		event.preventDefault();
+	}
+	//监控loading页面  
+//	setTimeout(function(){
+//		$(".loadLayer").hide();
+//	},2000)
 //	var times = null;
-//	var timesOut =  setTimeout(function(){
-//		if($('.carAnimate').length){
-//			$(".J_car").removeClass("carAnimate");
-//			clearTimeout(times);
-//			times = setTimeout(function(){
-//				$(".J_car").addClass("carAnimate");
-//			},2000)
-//		}else{
-//			$(".J_car").addClass("carAnimate");
-//		}
-//	},3000)
-	
-	
-	
-	//页面一相关功能
-	function pageFrist() {
-		nextPage(document.querySelector(".footer-order"),1);
+//	times = setInterval(function(){
+//		animatedFn();
+//	},500)
+	window.onload = function(){
+		$(".loadLayer").hide();
+		animatedFn();
 	}
+	//页面加载动画效果
+	function animatedFn(){
+		if($(".loadLayer").css('display') == "none"){
+			//共享宝马文字动画
+			$(".J_gxbm").addClass("animated bounceInLeft")
+			//最上面小汽车动画
+			$(".J_car").addClass("carAnimate");
+			//go fun pro动画
+			$(".J_gofun").addClass("animated bounceInLeft adimatedTime1");
+			//来袭动画
+			$(".J_size").addClass("animated sizeAnimate ");
+			$(".J_sizeTwo").addClass("animated  sizeAnimateSecond")
+			//低至0元动画
+			$(".J_dz").addClass("animated bounceInLeft adimatedTime2");
+			//地球动画
+			$(".earthAnimate").addClass("earthAnimate");
+			//建筑物动画
+			$(".footer-city-main").addClass("cityAnimate");
+			//汽车动画
+			$(".footer-car-mian").addClass("footerCar");
+			//车轮子动画
+			$(".car-wheel-front").addClass("wheelRotate");
+			$(".car-wheel-end").addClass("wheelRotate");
+//			setTimeout(function() {
+//				$(".J_size").addClass("shake")
+//			}, 2000)
+			clearInterval(times);
+		}
+	}
+	
+	
+//初始化swpier
+var mySwiper = new Swiper('.swpier-second', {
+	prevButton: '.swiper-button-prev',
+	nextButton: '.swiper-button-next'
+	// direction:"horizontal"
+})
 
-	//页面二相关功能
-	function pageSecond(){
-		nextPage(document.querySelector(".apply"),2);
+pageFrist();
+pageSecond();
+pageThird();
+pageFour();
+
+
+
+//页面一相关功能
+function pageFrist() {
+	nextPage(document.querySelector(".footer-order"), 1);
+}
+
+//页面二相关功能
+function pageSecond() {
+	nextPage(document.querySelector(".apply"), 2);
+}
+//页面三相关功能
+function pageThird() {
+	nextPage(document.querySelector(".J_affirm"), 3);
+	//获取弹窗
+	var nd_layer = document.querySelector('.pageThird-layer');
+	//获取关闭弹窗按钮
+	var nd_close = document.querySelector(".popup-close");
+	//隐藏活动规则弹窗
+	nd_close.onclick = function() {
+		nd_layer.style.display = "none";
+		document.body.addEventListener('touchmove',bodyScroll);
 	}
-	//页面三相关功能
-	function pageThird(){
-		nextPage(document.querySelector(".J_affirm"),3);
-		//获取弹窗
-		var nd_layer = document.querySelector('.pageThird-layer');
-		//获取关闭弹窗按钮
-		var nd_close = document.querySelector(".popup-close");
-		//隐藏活动规则弹窗
-		nd_close.onclick = function() {
-		    nd_layer.style.display = "none";
+	//获取活动规则
+	var nd_activeState = document.querySelector(".J_activeState");
+	//显示活动规则弹窗
+	nd_activeState.onclick = function() {
+		nd_layer.style.display = "block";
+		document.body.removeEventListener('touchmove',bodyScroll);
+	}
+}
+//页面四相关功能
+function pageFour() {
+	$(".J_shade").on('click', function() {
+		$(".pageFour-layer").show();
+	})
+	$(".J_layerShade").on('click', function() {
+		$(".pageFour-layer").hide();
+	})
+}
+//切换轮播下一页
+function nextPage(ele, index) {
+	ele.onclick = function() {
+		$(".pageWrap").eq(index).addClass("fadeInDown");
+		if(index == 3) {
+			setTimeout(function() {
+				$(".wingFly").css("visibility", "visible");
+				$(".wingFly-big div").eq(0).addClass("flyAnimation");
+				$(".wingFly-big div").eq(1).addClass("flyAnimationRight");
+				$(".wingFly-samll div").eq(0).addClass(" flyAnimationRight");
+				$(".wingFly-samll div").eq(1).addClass("flyAnimation");
+			}, 1000)
+
 		}
-		//获取活动规则
-		var nd_activeState = document.querySelector(".J_activeState");
-		//显示活动规则弹窗
-		nd_activeState.onclick = function() {
-		    nd_layer.style.display = "block";
-		}
 	}
-	//页面四相关功能
-	function pageFour(){
-		$(".J_shade").on('click',function(){
-			$(".pageFour-layer").show();
-		})
-		$(".J_layerShade").on('click',function(){
-			$(".pageFour-layer").hide();
-		})
-	}
-	//切换轮播下一页
-	function nextPage(ele,index){
-		ele.onclick = function(){
-			$(".pageWrap").eq(index).addClass("fadeInDown");
-            if(index == 3){
-                setTimeout(function(){
-                    $(".wingFly").css("visibility","visible");
-                     $(".wingFly-big div").eq(0).addClass("flyAnimation");
-                    $(".wingFly-big div").eq(1).addClass("flyAnimationRight");
-                     $(".wingFly-samll div").eq(0).addClass(" flyAnimationRight");
-                    $(".wingFly-samll div").eq(1).addClass("flyAnimation");
-                },1000)
-               
-            }
-		}
-	}
-	
-</script>
+}</script>
